game now uses a track, simple lose condition

--- a/gameWrapper.html
+++ b/gameWrapper.html
@@ -103,7 +103,8 @@
 						<tr>
 							<td> <input type="radio" onclick="changeTexture('Textures/black.png');" name="texture" value="black"> Black<br> </td>
 							<td> <input type="radio" onclick="changeTexture('Textures/white.png');" name="texture" value="white"> White<br> </td>
-							<td> <input type="radio" onclick="changeTexture('Textures/heightmap.png');" name="texture" value="heightmap" checked> Height Map<br> </td>
+							<td> <input type="radio" onclick="changeTexture('Textures/heightmap.png');" name="texture" value="heightmap"> Height Map<br> 
+							<td> <input type="radio" onclick="changeTexture('Textures/track1.png');" name="texture" value="track1" checked> Track<br></td>
 
 						</tr>
 				</table>
