removed configurable html elements, made canvas bigger

--- a/gameWrapper.html
+++ b/gameWrapper.html
@@ -86,17 +86,17 @@
 		<h1>CS 464 Final Project</h1>
 		<h4>Jared Mart & Bryan Bixler</h4>
 
-		<h5> Drag the canvas left and right to steer the tank, drag up and down to go faster or slower </h5>
+		<!--<h5> Drag the canvas left and right to steer the tank, drag up and down to go faster or slower </h5>-->
 
 		<table>
 			<td>
 				<!-- embed the HTML5 Canvas Drawing object on the page.-->
 				<!-- Name the canvas 'graphicsCanvas' for the javascript code. -->
-				<canvas id="graphicsCanvas" width=960 height=540>
+				<canvas id="graphicsCanvas" width=1280 height=720>
 				If you're seeing this your web browser doesn't support the &lt;canvas>&gt; element. Ouch!
 				</canvas>
 			</td>
-
+<!--
 			<td>
 				<h3>Pick a texture</h3>
 				<table style="border: 0; padding: 5px;">
@@ -134,7 +134,8 @@
 						<td>B: <input type="text" id="ambientB" value="0.5" /></td>
 					</tr>
 				</table>
-			</td>	
+			</td>
+-->			
 		</table>
 	</body>
 </html>
