--- a/gameWrapper.html
+++ b/gameWrapper.html
@@ -18,13 +18,21 @@
 
 			varying vec2 vTextureCoord;
 			varying vec3 vLightWeighting; //lighting rgb color scaling factor
+			varying vec3 nVertexPosition;
 
 			uniform sampler2D uSampler;
 
 			void main(void) 
 			{
 				vec4 textureColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
-				gl_FragColor = vec4(textureColor.rgb * vLightWeighting, textureColor.a);				
+				if (nVertexPosition[1] >= 1.0)
+				{
+					gl_FragColor = vec4(textureColor.rgb * vLightWeighting, textureColor.a);				
+				}
+				else
+				{
+					discard;
+				}
 			}
 		</script>
 
@@ -40,7 +48,7 @@
 
 			varying vec2 vTextureCoord;
 			varying vec3 nVertexPosition;
-			varying vec4 colorVector;	
+			varying vec4 colorVector;
 			
 			//lighting "stuff"
 			uniform mat3 uNMatrix; //normal matrix
@@ -65,6 +73,14 @@
 				float blueSquared = colorVector[2] * colorVector[2];
 				float newY = sqrt(redSquared + greenSquared + blueSquared);
 				newY = (newY * (2.0 / sqrt(3.0))) - 1.0; //scale to -1 to 1
+				if (newY > 0.0)
+				{
+					newY = 1.0;
+				}
+				else
+				{
+					newY = 0.0;
+				}
 				nVertexPosition[1] = newY;
 				
 				//set the position of the vertex
