--- a/gameWrapper.html
+++ b/gameWrapper.html
@@ -25,7 +25,7 @@
 			void main(void) 
 			{
 				vec4 textureColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
-				if (nVertexPosition[1] >= 1.0)
+				if (nVertexPosition[1] >= 0.0)
 				{
 					gl_FragColor = vec4(textureColor.rgb * vLightWeighting, textureColor.a);				
 				}
@@ -75,11 +75,11 @@
 				newY = (newY * (2.0 / sqrt(3.0))) - 1.0; //scale to -1 to 1
 				if (newY > 0.0)
 				{
-					newY = 1.0;
+					newY = 0.0;
 				}
 				else
 				{
-					newY = 0.0;
+					newY = -1.0;
 				}
 				nVertexPosition[1] = newY;
 				
@@ -90,6 +90,31 @@
 				vec3 transformedNormal = uNMatrix * aVertexNormal;
 				float directionalLightWeighting = max(dot(transformedNormal, uLightingDirection), 0.0);
 				vLightWeighting = uAmbientColor + uDirectionalColor * directionalLightWeighting;
+			}
+		</script>
+		
+		<script id="shader-playerModelFS" type="x-shader/x-fragment">
+			precision mediump float;
+
+			varying vec4 vColor;
+
+			void main(void) {
+				gl_FragColor = vColor;
+			}
+		</script>
+
+		<script id="shader-playerModelVS" type="x-shader/x-vertex">
+			attribute vec3 aVertexPosition;
+			attribute vec4 aVertexColor;
+
+			uniform mat4 uMVMatrix;
+			uniform mat4 uPMatrix;
+
+			varying vec4 vColor;
+
+			void main(void) {
+				gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+				vColor = aVertexColor;
 			}
 		</script>
 
